--- a/index.html
+++ b/index.html
@@ -1,29 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Finpla – Adviser Directory</title>
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Finpla – Adviser Directory</title>
   <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #f8f6f3;
-      margin: 0;
-      padding: 40px;
-    }
-    h1 {
-      color: #28A9D7;
-    }
-    p {
-      max-width: 600px;
-    }
+    body{font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial,sans-serif;background:#f8f6f3;margin:0;padding:40px}
+    h1{color:#28A9D7;margin:0 0 12px}
+    p{max-width:720px;line-height:1.5}
   </style>
 </head>
 <body>
   <h1>Finpla Adviser Directory</h1>
-  <p>
-    This page is live via GitHub Pages.  
-    Next step: load adviser data and add search & filters.
-  </p>
+  <p>If you can see this page, GitHub Pages is serving <code>index.html</code> correctly.</p>
 </body>
 </html>
